5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1834_1276.log
== TEST (2019-06-27 14:09:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("n de horas:")))

vetor = (shape(matriz)[1])
total = zeros(vetor, dtype=int)

for i in range(vetor):
	total[i] = max(matriz[i,:])
print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:13:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("n de horas:")))

dias = zeros(7, dtype=int)

for i in range(dias):
	dias[i] = sum(matriz[;,i])
-- ERROR:
File "XXXX", line 9
    dias[i] = sum(matriz[;,i])
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:13:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("n de horas:")))

dias = zeros(7, dtype=int)

for i in range(dias):
	dias[i] = sum(matriz[;,i])
print(dias)	
-- ERROR:
File "XXXX", line 9
    dias[i] = sum(matriz[;,i])
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:13:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("n de horas:")))

dias = zeros(7, dtype=int)

for i in range(dias):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:13:38) 
-- CODE:
from numpy import*


matriz = array(eval(input("n de horas:")))

dias = zeros(7, dtype=int)

for i in range(dias):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:13:46) 
-- CODE:
from numpy import*


matriz = array(eval(input("n de horas:")))

dias = zeros(7, dtype=int)

for i in range(dias):
	dias[i] = sum(matriz[:,i])
	print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:14:05) 
-- CODE:
from numpy import*


matriz = array(eval(input("n de horas:")))

dias = zeros(7, dtype=int)

for i in range(dias):
	dias[i] = sum(matriz[:,i])
	print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:14:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("n de horas:")))

dias = zeros(7, dtype=int)

for i in range(dias):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:15:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("n de horas:")))

dias = zeros(7, dtype=int)

for i in range(7):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:16:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("n de horas:")))

dias = zeros(7, dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:17:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((1,7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:18:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((1,7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:18:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((1,7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:19:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((1,7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[i,:])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:19:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((1,7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[i,:])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:19:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[i,:])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:19:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[i,:])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 14:19:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[i,:])
print(dias)	
-- EXECUTION TIME:
1.1672
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[28 21 42 16 47 41 21]
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
[39 42 39 58 19 27 40]
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
dia da semana:[45 30 28 37 26 40 40]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:20:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:20:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:20:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for i in range(size(dias)):
	dias[i] = sum(matriz[:,i])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:21:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[i] = sum(matriz[:,j])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:21:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[j] = sum(matriz[:,j])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:22:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dias)):
	dias[j] = max(dias[j])
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:23:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dias)):
	dias[j] == max(dias)
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:28:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dias)):
	if(dias[j] == max(dias))
		dias = dias + 1
print(dias)	
-- ERROR:
File "XXXX", line 13
    if(dias[j] == max(dias))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:28:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dias)):
	if(dias[j] == max(dias)):
		dias = dias + 1
print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:29:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dias)):
	if(dias[j] == max(dias)):
		dias = j + 1
		print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:30:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dias)):
	if(dias[j] = max(dias)):
		dias = j + 1
		print(dias)	
-- ERROR:
File "XXXX", line 13
    if(dias[j] = max(dias)):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 14:30:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dias)):
	if(dias[j] = max(dias)):
		dias = j + 1
		print(dias)	
-- EXECUTION TIME:
0.661811
-- ERROR:
  File "/home/codebench/codes/1834/1276/main.py", line 13
    if(dias[j] = max(dias)):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:30:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dias = zeros((7), dtype=int)

for j in range(size(dias)):
	dias[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dias)):
	if(dias[j] == max(dias)):
		dias = j + 1
		print(dias)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:31:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dias)):
	dia[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dia)):
	if(dia[j] == max(dia)):
		dia = j + 1
		print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:31:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(7):
	dia[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dia)):
	if(dia[j] == max(dia)):
		dia = j + 1
		print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:31:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
#print(dias)	

for j in range(size(dia)):
	if(dia[j] == max(dia)):
		dia = j + 1
		print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:32:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
print(dias)	

#for j in range(size(dia)):
	#if(dia[j] == max(dia)):
	#dia = j + 1
	#	print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:32:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
print(dia)	

#for j in range(size(dia)):
	#if(dia[j] == max(dia)):
	#dia = j + 1
	#	print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:33:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
print(dia)	

for j in range(size(dia)):
	if(dia[j] == max(dia)):
		dia = j 
		print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:34:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
print(dia)	

for j in range(size(dia)):
	if(dia[j] == max(dia)):
		dia = j + 1
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:34:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
print(dia)	

for j in range(size(dia)):
	if(dia[j] == max(dia)):
		dia = j + 1
		print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:36:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
print(dia)	

for j in range(size(dia)):
	if(dia[j] == max(dia)):
		print(dia + 1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:36:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
#print(dia)	

for j in range(size(dia)):
	if(dia[j] == max(dia)):
		print(dia + 1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:37:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
#print(dia)	

for i in range(size(dia)):
	if(dia[i] == max(dia)):
		print(dia + 1)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:37:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
#print(dia)	

x = 0
for i in range(size(dia)):
	if(dia[i] == max(dia)):
		x = x + 1
		print(x
-- ERROR:
File "XXXX", line 17
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:38:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
#print(dia)	

x = 0
for i in range(size(dia)):
	if(dia[i] == max(dia)):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 14:38:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
#print(dia)	

x = 0
for i in range(size(dia)):
	if(dia[i] == max(dia)):
		x = x + 1
		print(x)
-- EXECUTION TIME:
1.13547
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:38:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] == max(dia)):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 14:40:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] == max(dia)):
		x = x + 1
		print(x)
-- EXECUTION TIME:
1.01185
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:40:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] == max(dia)*0.75):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:41:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >=ax(dia)*0.75):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:42:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= max(dia)*0.75):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:42:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= max(dia)*0.75):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:42:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= max(dia)*0.75):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:43:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= sum((dia)*0.75))
		x = x + 1
		print(x)
-- ERROR:
File "XXXX", line 14
    if(dia[i] >= sum((dia)*0.75))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:43:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= sum((dia)*0.75)):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:43:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= sum((dia)*0.75)):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:46:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= sum((dia)*0.75)):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:46:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia)*0.75)):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:47:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:47:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:50:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 14:50:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		print(i + 1)
-- EXECUTION TIME:
1.11458
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 14:50:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

for i in range(size(dia)):
	if(dia[i] == max((dia))):
		print(i + 1)
-- EXECUTION TIME:
1.15652
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:50:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

for i in range(size(dia)):
	if(dia[i] == max((dia))):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:51:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	

for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:51:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	
x = 0 
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = x + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 14:51:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	
x = 0 
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = x + 1
		print(x)
-- EXECUTION TIME:
0.958823
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:51:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	
x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 14:52:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	
x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- EXECUTION TIME:
1.0233
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 14:56:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	print(dia)
#x = 0
#for i in range(size(dia)):
#	if(dia[i] >= max((dia))):
#		x = i + 1
#		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:11:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	print(dia)

for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 13:11:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	print(dia)

for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- EXECUTION TIME:
1.26782
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[30  0  0  0  0  0  0]
[30 30  0  0  0  0  0]
[30 30 30  0  0  0  0]
[30 30 30 27  0  0  0]
[30 30 30 27 29  0  0]
[30 30 30 27 29 32  0]
[30 30 30 27 29 32 38]
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
[62  0  0  0  0  0  0]
[62 71  0  0  0  0  0]
[62 71 45  0  0  0  0]
[62 71 45 41  0  0  0]
[62 71 45 41 43  0  0]
[62 71 45 41 43 44  0]
[62 71 45 41 43 44 40]
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
[29  0  0  0  0  0  0]
[29 36  0  0  0  0  0]
[29 36 56  0  0  0  0]
[29 36 56 42  0  0  0]
[29 36 56 42 47  0  0]
[29 36 56 42 47 45  0]
[29 36 56 42 47 45 38]
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 13:11:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	print(dia)
x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- EXECUTION TIME:
1.30558
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[30  0  0  0  0  0  0]
[30 30  0  0  0  0  0]
[30 30 30  0  0  0  0]
[30 30 30 27  0  0  0]
[30 30 30 27 29  0  0]
[30 30 30 27 29 32  0]
[30 30 30 27 29 32 38]
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
[62  0  0  0  0  0  0]
[62 71  0  0  0  0  0]
[62 71 45  0  0  0  0]
[62 71 45 41  0  0  0]
[62 71 45 41 43  0  0]
[62 71 45 41 43 44  0]
[62 71 45 41 43 44 40]
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
[29  0  0  0  0  0  0]
[29 36  0  0  0  0  0]
[29 36 56  0  0  0  0]
[29 36 56 42  0  0  0]
[29 36 56 42 47  0  0]
[29 36 56 42 47 45  0]
[29 36 56 42 47 45 38]
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 13:11:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	print(dia)
x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- EXECUTION TIME:
1.16934
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[30  0  0  0  0  0  0]
[30 30  0  0  0  0  0]
[30 30 30  0  0  0  0]
[30 30 30 27  0  0  0]
[30 30 30 27 29  0  0]
[30 30 30 27 29 32  0]
[30 30 30 27 29 32 38]
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
[62  0  0  0  0  0  0]
[62 71  0  0  0  0  0]
[62 71 45  0  0  0  0]
[62 71 45 41  0  0  0]
[62 71 45 41 43  0  0]
[62 71 45 41 43 44  0]
[62 71 45 41 43 44 40]
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
[29  0  0  0  0  0  0]
[29 36  0  0  0  0  0]
[29 36 56  0  0  0  0]
[29 36 56 42  0  0  0]
[29 36 56 42 47  0  0]
[29 36 56 42 47 45  0]
[29 36 56 42 47 45 38]
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:12:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	print(dia)
x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 13:12:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	print(dia)
x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- EXECUTION TIME:
1.18932
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[30  0  0  0  0  0  0]
[30 30  0  0  0  0  0]
[30 30 30  0  0  0  0]
[30 30 30 27  0  0  0]
[30 30 30 27 29  0  0]
[30 30 30 27 29 32  0]
[30 30 30 27 29 32 38]
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
[62  0  0  0  0  0  0]
[62 71  0  0  0  0  0]
[62 71 45  0  0  0  0]
[62 71 45 41  0  0  0]
[62 71 45 41 43  0  0]
[62 71 45 41 43 44  0]
[62 71 45 41 43 44 40]
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
[29  0  0  0  0  0  0]
[29 36  0  0  0  0  0]
[29 36 56  0  0  0  0]
[29 36 56 42  0  0  0]
[29 36 56 42 47  0  0]
[29 36 56 42 47 45  0]
[29 36 56 42 47 45 38]
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:12:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	print(dia)
x = 0
for i in range(size(dia)):
	if(dia[i] = max((dia))):
		x = i + 1
		print(x)
-- ERROR:
File "XXXX", line 13
    if(dia[i] = max((dia))):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:12:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	print(dia)
x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 13:13:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	#print(dia)
x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 13:13:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("dia da semana:")))

dia = zeros((7), dtype=int)

for j in range(size(dia)):
	dia[j] = sum(matriz[:,j])
	#print(dia)
x = 0
for i in range(size(dia)):
	if(dia[i] >= max((dia))):
		x = i + 1
		print(x)
-- EXECUTION TIME:
1.23413
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
